dev/test_programs/INVALID/group12/scan_parse_errors/newline_error2.go
// unexpected newline

package main

func main()
{
	print();
}